Temporarily removing section spacing until responsive layout issue is figured out.

--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ ul {
 }
 
 /********************************** Navigation Section *********************************/
+
 .navbar-brand {
   margin-left: 0em;
 }
@@ -53,6 +54,7 @@ ul {
 
 /********************************** Greeting Section *********************************/
 #title {
+  margin-top: 20%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -67,11 +69,12 @@ ul {
 
 /********************************** Introduction Section *********************************/
 #intro {
-  margin-left: auto;
-  margin-right: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
 }
 
-/********************************** Experience Section *********************************/
+/********************************** About Section *********************************/
 #about {
   margin-left: auto;
   margin-right: auto;
@@ -89,12 +92,14 @@ ul {
 
 /********************************** Education Section *********************************/
 #education {
+  
   margin-left: auto;
   margin-right: auto;
 }
 
 /********************************** Projects Section *********************************/
 #projects {
+  
   margin-left: auto;
   margin-right: auto;
 }
@@ -110,7 +115,8 @@ ul {
 /********************************** Contact Section *********************************/
 .contact {
   text-align: center;
-  margin-top: 50px;
+  
+  margin-bottom: 10%;
   margin-left: auto;
   margin-right: auto;
 }
